# travel_insurance_webapp

./: Dockerfile  README.md  config.toml  modelling.ipynb  preprocessed_data.csv  pyproject.toml  requirements.txt  webapp.py  xgb_model_without_tuning.pkl
.streamlit/: config.toml
input/: preprocessed_data.csv
model_train/: classifier_model.pkl  explore.ipynb  xgb_model_without_tuning.pkl
src/: button.py  custom_model.py  forms.py  visualization.py  xgb_model_without_tuning.pkl
src/data/: preprocessed_data.csv
webapp/: web_page.py
